--- a/project.ipynb
+++ b/project.ipynb
@@ -26,8 +26,11 @@
    "source": [
     "# Declare your variables here.\n",
     "\n",
-    "#Example\n",
-    "greeting = \"Hello world\""
+    "#greeting = \"Hello world\"\n",
+    "STUDENT_NAME = \"N. Winocur\"\n",
+    "student_age_fictional = 700\n",
+    "LIKES_PROGRAMMING = True\n",
+    "your_average_grade = 9000.1"
    ]
   },
   {
@@ -40,12 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cb7a4019",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 3.141592653589793, 69, 1337]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Favorite numbers list"
+    "# Favorite numbers list\n",
+    "import math\n",
+    "favored_numbers_list = [0,1,math.pi,69,1337]\n",
+    "print(favored_numbers_list)"
    ]
   },
   {
@@ -65,9 +79,18 @@
    "execution_count": null,
    "id": "7997e8d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': 'Nicolas Winocur', 'Age': 40, 'Final grade': 9000.1}\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO"
+    "student_information = {\"Name\":student_name, \"Age\":student_age_fictional, \"Final grade\":your_average_grade}\n",
+    "print(student_information)"
    ]
   },
   {
@@ -83,12 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "6f5ee032",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.879999999999999\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "import numpy as np\n",
+    "student_grades = [8.5, 9.2, 7.8, 8.9, 10]\n",
+    "their_average = np.mean(student_grades)\n",
+    "print(their_average)"
    ]
   },
   {
@@ -101,12 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4396c1a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "7.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "highest_grade = np.max(student_grades)\n",
+    "lowest_grade = np.min(student_grades)\n",
+    "print(highest_grade)\n",
+    "print(lowest_grade)"
    ]
   },
   {
@@ -129,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "7ac6cb18",
    "metadata": {},
    "outputs": [
@@ -516,7 +562,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,12 +585,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a8ff6c53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0  id_realEstates  isNew                    realEstate_name  \\\n",
+      "0           1       153771986  False            ferrari 57 inmobiliaria   \n",
+      "1           2       153867863  False  tecnocasa fuenlabrada ferrocarril   \n",
+      "2           3       153430440  False                 look find boadilla   \n",
+      "3           4       152776331  False  tecnocasa fuenlabrada ferrocarril   \n",
+      "4           5       153180188  False            ferrari 57 inmobiliaria   \n",
+      "\n",
+      "   phone_realEstate                                       url_inmueble  rooms  \\\n",
+      "0       912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+      "1       916358736.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+      "2       916350408.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
+      "3       916358736.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+      "4       912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
+      "\n",
+      "   bathrooms  surface   price  ... level4Id level5Id level6Id level7Id  \\\n",
+      "0        2.0    103.0  195000  ...        0        0        0        0   \n",
+      "1        1.0      NaN   89000  ...        0        0        0        0   \n",
+      "2        2.0     99.0  390000  ...        0        0        0        0   \n",
+      "3        1.0     86.0   89000  ...        0        0        0        0   \n",
+      "4        2.0    106.0  172000  ...        0        0        0        0   \n",
+      "\n",
+      "  level8Id accuracy          latitude          longitude zipCode customZone  \n",
+      "0        0        0  40,2948276786438  -3,44402412135624     NaN        NaN  \n",
+      "1        0        1          40,28674           -3,79351     NaN        NaN  \n",
+      "2        0        0  40,4115646786438  -3,90662252135624     NaN        NaN  \n",
+      "3        0        0  40,2853785786438  -3,79508142135624     NaN        NaN  \n",
+      "4        0        0  40,2998774864376  -3,45226301356237     NaN        NaN  \n",
+      "\n",
+      "[5 rows x 37 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "print(ds.head())"
    ]
   },
   {
@@ -569,12 +651,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "aa45da68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house located at El Escorial is the most expensive, and its price is 8500000 USD.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "#print(ds.columns)\n",
+    "expensive_house_price = ds.price.max()\n",
+    "expensive_house_id = ds.price.idxmax()\n",
+    "expensive_house_address = ds.address[expensive_house_id]\n",
+    "\n",
+    "print(f\"The house located at {expensive_house_address} is the most expensive, and its price is {expensive_house_price} USD.\")"
    ]
   },
   {
@@ -591,12 +686,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "007c60de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The house located at Parla is the cheapest, and its price is 600 USD.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "inexpensive_house_price = ds.price[ds.price>0].min()\n",
+    "inexpensive_house_id = ds.price.idxmin()\n",
+    "inexpensive_house_address = ds.address[inexpensive_house_id]\n",
+    "\n",
+    "print(f\"The house located at {inexpensive_house_address} is the cheapest, and its price is {inexpensive_house_price} USD.\")"
    ]
   },
   {
@@ -734,7 +841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -748,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
