Corrected bugs in first small handful of exercises' solution implementations and did up to exercise five

--- a/project.ipynb
+++ b/project.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "7ac6cb18",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a8ff6c53",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "aa45da68",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "007c60de",
    "metadata": {},
    "outputs": [
@@ -694,13 +694,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The house located at Parla is the cheapest, and its price is 600 USD.\n"
+      "The house located at Berlin, Coslada is the cheapest, and its price is 600 USD.\n"
      ]
     }
    ],
    "source": [
     "inexpensive_house_price = ds.price[ds.price>0].min()\n",
-    "inexpensive_house_id = ds.price.idxmin()\n",
+    "inexpensive_house_id = ds.price[ds.price>0].idxmin()\n",
     "inexpensive_house_address = ds.address[inexpensive_house_id]\n",
     "\n",
     "print(f\"The house located at {inexpensive_house_address} is the cheapest, and its price is {inexpensive_house_price} USD.\")"
@@ -724,12 +724,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "580cbc83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest house is located at Sevilla la Nueva, and its area is 249000.0 square meters.\n",
+      "The smallest house is located at Calle Amparo,  Madrid Capital, and its area is 15.0 square meters.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "largest_house_area = ds.surface.max()\n",
+    "largest_house_id = ds.surface.idxmax()\n",
+    "largest_house_address = ds.address[largest_house_id]\n",
+    "\n",
+    "print(f\"The largest house is located at {largest_house_address}, and its area is {largest_house_area} square meters.\")\n",
+    "\n",
+    "\n",
+    "smallest_house_area = ds.surface[ds.surface>0].min()\n",
+    "smallest_house_id = ds.surface[ds.surface>0].idxmin()\n",
+    "smallest_house_address = ds.address[smallest_house_id]\n",
+    "\n",
+    "print(f\"The smallest house is located at {smallest_house_address}, and its area is {smallest_house_area} square meters.\")"
    ]
   },
   {
@@ -748,12 +768,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "07ef25bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 168 unique populations in the dataset\n",
+      " Madrid Capital, Ajalvir, Alcalá de Henares, Alcobendas, Alcorcón, Aldea del Fresno, Algete, Alpedrete, Ambite, Anchuelo, Aranjuez, Arganda del Rey, Arroyomolinos (Madrid), Batres, Becerril de la Sierra, Belmonte de Tajo, Boadilla del Monte, Braojos, Brea de Tajo, Brunete, Buitrago del Lozoya, Bustarviejo, Cabanillas de la Sierra, Cadalso de los Vidrios, Camarma de Esteruelas, Campo Real, Canencia, Carabaña, Casarrubuelos, Cenicientos, Cercedilla, Chapinería, Chinchón, Ciempozuelos, Cobeña, Collado Mediano, Collado Villalba, Colmenar Viejo, Colmenar de Oreja, Colmenar del Arroyo, Colmenarejo, Corpa, Coslada, Cubas de la Sagra, Daganzo de Arriba, El Atazar, El Berrueco, El Boalo - Cerceda – Mataelpino, El Escorial, El Molar (Madrid), El Vellón, El Álamo, Estremera, Fresnedillas de la Oliva, Fresno de Torote, Fresno de Torote - Serracines, Fuenlabrada, Fuente El Saz de Jarama, Fuentidueña de Tajo, Galapagar, Garganta de los Montes, Gargantilla del Lozoya, Gascones, Getafe, Griñón, Guadalix de la Sierra, Guadarrama, Horcajo de la Sierra, Hoyo de Manzanares, Humanes de Madrid, La Cabrera, La Hiruela, Las Rozas de Madrid, Leganés, Loeches, Los Molinos, Los Santos de la Humosa, Lozoya, Lozoyuela-navas-sieteiglesias, Madarcos, Majadahonda, Manzanares El Real, Meco, Mejorada del Campo, Miraflores de la Sierra, Montejo de la Sierra, Moraleja de Enmedio, Moralzarzal, Morata de Tajuña, Móstoles, Navacerrada, Navalafuente, Navalagamella, Navalcarnero, Navarredonda, Navas del Rey, Nuevo Baztán, Orusco de Tajuña, Paracuellos de Jarama, Parla, Patones, Pedrezuela, Pelayos de la Presa, Perales de Tajuña, Pezuela de las Torres, Pinilla del Valle, Pinto, Piñuécar-gandullas, Pozuelo de Alarcón, Pozuelo del Rey, Puentes Viejas, Quijorna, Rascafría, Redueña, Ribatejada, Rivas-vaciamadrid, Robledo de Chavela, Robregordo, San Agustín del Guadalix, San Fernando de Henares, San Lorenzo de El Escorial, San Martín de Valdeiglesias, San Martín de la Vega, San Sebastián de los Reyes, Santa María de la Alameda, Santorcaz, Serranillos del Valle, Sevilla la Nueva, Soto del Real, Talamanca de Jarama, Tielmes, Titulcia, Torrejón de Ardoz, Torrejón de Velasco, Torrejón de la Calzada, Torrelaguna, Torrelodones, Torremocha de Jarama, Torres de la Alameda, Tres Cantos, Valdaracete, Valdeavero, Valdelaguna, Valdemanco, Valdemaqueda, Valdemorillo, Valdemoro, Valdeolmos-Alalpardo, Valdepiélagos, Valdetorres de Jarama, Valdilecha, Valverde de Alcalá, Velilla de San Antonio, Venturada, Villa del Prado, Villaconejos, Villalbilla, Villamanrique de Tajo, Villamanta, Villamantilla, Villanueva de Perales, Villanueva de la Cañada, Villanueva del Pardillo, Villar del Olmo, Villarejo de Salvanés, Villaviciosa de Odón, Villavieja del Lozoya, Zarzalejo, "
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "populations = ds.groupby(\"level5\")\n",
+    "print(f\"There are {populations.ngroups} unique populations in the dataset\")\n",
+    "\n",
+    "for pop in populations:\n",
+    "    print(f\"{pop[0]}\", end=\", \")"
    ]
   },
   {
@@ -768,12 +801,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "7eb98e35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NAs found? True\n",
+      "['realEstate_name', 'phone_realEstate', 'rooms', 'bathrooms', 'surface', 'description', 'level4', 'level6', 'level7', 'level8', 'zipCode', 'customZone']\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "columns_containing_na = []\n",
+    "is_na_found = False\n",
+    "for column_name, series in ds.items():\n",
+    "    if series.isna().any():\n",
+    "        is_na_found = True\n",
+    "        columns_containing_na.append(column_name)\n",
+    "\n",
+    "print(f\"NAs found? {is_na_found}\")\n",
+    "print(columns_containing_na)"
    ]
   },
   {
