Implemented solutions for all but the last exercise

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "04495cc0",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "cb7a4019",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7997e8d0",
    "metadata": {},
    "outputs": [
@@ -84,12 +84,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Name': 'Nicolas Winocur', 'Age': 40, 'Final grade': 9000.1}\n"
+      "{'Name': 'N. Winocur', 'Age': 700, 'Final grade': 9000.1}\n"
      ]
     }
    ],
    "source": [
-    "student_information = {\"Name\":student_name, \"Age\":student_age_fictional, \"Final grade\":your_average_grade}\n",
+    "student_information = {\"Name\":STUDENT_NAME, \"Age\":student_age_fictional, \"Final grade\":your_average_grade}\n",
     "print(student_information)"
    ]
   },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "6f5ee032",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "4396c1a4",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "7ac6cb18",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "a8ff6c53",
    "metadata": {},
    "outputs": [
@@ -599,6 +599,11 @@
       "2           3       153430440  False                 look find boadilla   \n",
       "3           4       152776331  False  tecnocasa fuenlabrada ferrocarril   \n",
       "4           5       153180188  False            ferrari 57 inmobiliaria   \n",
+      "5           6       153934794  False                            expimad   \n",
+      "6           7       153848236  False                            expimad   \n",
+      "7           8       153482331  False                            expimad   \n",
+      "8           9       153885351  False                            expimad   \n",
+      "9          10       153215459  False                            modesta   \n",
       "\n",
       "   phone_realEstate                                       url_inmueble  rooms  \\\n",
       "0       912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
@@ -606,6 +611,11 @@
       "2       916350408.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
       "3       916358736.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
       "4       912177526.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
+      "5       912780412.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
+      "6       912780412.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    3.0   \n",
+      "7       912780412.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    2.0   \n",
+      "8       912780412.0  https://www.fotocasa.es/es/comprar/vivienda/ma...    4.0   \n",
+      "9               NaN  https://www.fotocasa.es/es/comprar/vivienda/ma...    4.0   \n",
       "\n",
       "   bathrooms  surface   price  ... level4Id level5Id level6Id level7Id  \\\n",
       "0        2.0    103.0  195000  ...        0        0        0        0   \n",
@@ -613,6 +623,11 @@
       "2        2.0     99.0  390000  ...        0        0        0        0   \n",
       "3        1.0     86.0   89000  ...        0        0        0        0   \n",
       "4        2.0    106.0  172000  ...        0        0        0        0   \n",
+      "5        1.0     70.0  315000  ...        0        0        0        0   \n",
+      "6        2.0    145.0  430000  ...        0        0        0        0   \n",
+      "7        1.0     95.0  275000  ...        0        0        0        0   \n",
+      "8        3.0    277.0  445000  ...        0        0        0        0   \n",
+      "9        2.0    129.0  350000  ...        0        0        0        0   \n",
       "\n",
       "  level8Id accuracy          latitude          longitude zipCode customZone  \n",
       "0        0        0  40,2948276786438  -3,44402412135624     NaN        NaN  \n",
@@ -620,13 +635,18 @@
       "2        0        0  40,4115646786438  -3,90662252135624     NaN        NaN  \n",
       "3        0        0  40,2853785786438  -3,79508142135624     NaN        NaN  \n",
       "4        0        0  40,2998774864376  -3,45226301356237     NaN        NaN  \n",
+      "5        0        0          40,53391           -3,89445     NaN        NaN  \n",
+      "6        0        0  40,5105842135624  -3,89436578643763     NaN        NaN  \n",
+      "7        0        0          40,53294           -3,89898     NaN        NaN  \n",
+      "8        0        0  40,5363057864376  -3,89294421356237     NaN        NaN  \n",
+      "9        0        0          40,37502           -3,74391     NaN        NaN  \n",
       "\n",
-      "[5 rows x 37 columns]\n"
+      "[10 rows x 37 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(ds.head())"
+    "print(ds.head(10)) #default shows first five rows; showing ten confirms we have at least one NaN value"
    ]
   },
   {
@@ -651,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "aa45da68",
    "metadata": {},
    "outputs": [
@@ -686,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "007c60de",
    "metadata": {},
    "outputs": [
@@ -724,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "580cbc83",
    "metadata": {},
    "outputs": [
@@ -768,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "07ef25bb",
    "metadata": {},
    "outputs": [
@@ -801,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "id": "7eb98e35",
    "metadata": {},
    "outputs": [
@@ -810,7 +830,7 @@
      "output_type": "stream",
      "text": [
       "NAs found? True\n",
-      "['realEstate_name', 'phone_realEstate', 'rooms', 'bathrooms', 'surface', 'description', 'level4', 'level6', 'level7', 'level8', 'zipCode', 'customZone']\n"
+      "['countryId', 'level1Id', 'level2Id', 'level3Id', 'level4Id', 'level5Id', 'level6Id', 'level7Id', 'level8Id', 'zipCode', 'customZone']\n"
      ]
     }
    ],
@@ -818,12 +838,13 @@
     "columns_containing_na = []\n",
     "is_na_found = False\n",
     "for column_name, series in ds.items():\n",
-    "    if series.isna().any():\n",
+    "    # The \"level#\" columns look useful but columns like \"level#Id\" contain nothing but zeroes.  So just like the NaNs I see no reason to keep them.\n",
+    "    if series.isna().all() or (series ==0).all(): \n",
     "        is_na_found = True\n",
     "        columns_containing_na.append(column_name)\n",
     "\n",
     "print(f\"NAs found? {is_na_found}\")\n",
-    "print(columns_containing_na)"
+    "print(columns_containing_na)\n"
    ]
   },
   {
@@ -838,12 +859,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9f174338",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size before removing nulls was\t567395\n",
+      "Size after removing nulls is\t536725\n",
+      "Size after removing both nulls and columns containing exclusively zeroes is\t398710\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "size_before_removing_nulls = ds.size\n",
+    "print(f\"Size before removing nulls was\\t{size_before_removing_nulls}\")\n",
+    "ds_without_nas = ds.dropna(axis=1, how=\"all\")\n",
+    "print(f\"Size after removing nulls is\\t{ds_without_nas.size}\")\n",
+    "\n",
+    "#next will clear useless only-zeroes columns by replacing those values with NAs and then dropping the same way\n",
+    "ds_cleaned_up = ds.replace(0, np.nan).dropna(axis=1, how=\"all\")\n",
+    "print(f\"Size after removing both nulls and columns containing exclusively zeroes is\\t{ds_cleaned_up.size}\")"
    ]
   },
   {
@@ -858,12 +896,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2a495ff1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Unnamed: 0  id_realEstates  isNew                  realEstate_name  \\\n",
+      "453           454       153843083  False                  akris arguelles   \n",
+      "607           608       153620088  False        100 home red inmobiliaria   \n",
+      "613           614       153478908  False               mares inmobiliaria   \n",
+      "707           708       153736961  False                         gm house   \n",
+      "852           853       153274493  False                         gm house   \n",
+      "...           ...             ...    ...                              ...   \n",
+      "15019       15020       152767314  False                 haya real estate   \n",
+      "15089       15090       152767395  False                 haya real estate   \n",
+      "15091       15092       152767377  False                 haya real estate   \n",
+      "15094       15095       152767335  False                 haya real estate   \n",
+      "15192       15193       146831440  False  miranda servicios inmobiliarios   \n",
+      "\n",
+      "       phone_realEstate                                       url_inmueble  \\\n",
+      "453         911792694.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "607         912669623.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "613         911794026.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "707         916357589.0  https://www.fotocasa.es/es/comprar/vivienda/po...   \n",
+      "852         916357589.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "...                 ...                                                ...   \n",
+      "15019       911227078.0  https://www.fotocasa.es/vivienda/getafe/calle-...   \n",
+      "15089       911227078.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
+      "15091       911227078.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
+      "15094       911227078.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
+      "15192       912789124.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+      "\n",
+      "       rooms  bathrooms  surface     price  ...         level3  \\\n",
+      "453      2.0        2.0     85.0  165338.0  ...  Zona Suroeste   \n",
+      "607      4.0        3.0    225.0  251646.0  ...  Zona Suroeste   \n",
+      "613      4.0        4.0    257.0  396000.0  ...  Zona Suroeste   \n",
+      "707      3.0        2.0    110.0  225000.0  ...  Zona Suroeste   \n",
+      "852      4.0        2.0    280.0  373000.0  ...  Zona Suroeste   \n",
+      "...      ...        ...      ...       ...  ...            ...   \n",
+      "15019    3.0        2.0    143.0  218000.0  ...  Zona Suroeste   \n",
+      "15089    3.0        2.0    140.0  230000.0  ...  Zona Suroeste   \n",
+      "15091    3.0        2.0    143.0  217000.0  ...  Zona Suroeste   \n",
+      "15094    3.0        2.0    142.0  227000.0  ...  Zona Suroeste   \n",
+      "15192    3.0        2.0    300.0  462000.0  ...  Zona Suroeste   \n",
+      "\n",
+      "                       level4                  level5 level6  \\\n",
+      "453    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "607    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "613    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "707    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "852    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "...                       ...                     ...    ...   \n",
+      "15019  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "15089  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "15091  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "15094  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "15192  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
+      "\n",
+      "                                       level7 level8  \\\n",
+      "453                       Zona Las Castañeras    NaN   \n",
+      "607    La Cárcaba - El Encinar - Montemolinos    NaN   \n",
+      "613                     Zona Bulevar y Europa    NaN   \n",
+      "707                     Zona Bulevar y Europa    NaN   \n",
+      "852                     Zona Bulevar y Europa    NaN   \n",
+      "...                                       ...    ...   \n",
+      "15019                   Zona Bulevar y Europa    NaN   \n",
+      "15089                   Zona Bulevar y Europa    NaN   \n",
+      "15091                   Zona Bulevar y Europa    NaN   \n",
+      "15094                   Zona Bulevar y Europa    NaN   \n",
+      "15192                         Zona Zarzalejos    NaN   \n",
+      "\n",
+      "                                   upperLevel accuracy          latitude  \\\n",
+      "453                       Zona Las Castañeras      NaN          40,27657   \n",
+      "607    La Cárcaba - El Encinar - Montemolinos      NaN  40,2568635154027   \n",
+      "613                     Zona Bulevar y Europa      1.0        40,2839697   \n",
+      "707                     Zona Bulevar y Europa      NaN        40,2779047   \n",
+      "852                     Zona Bulevar y Europa      NaN        40,2827315   \n",
+      "...                                       ...      ...               ...   \n",
+      "15019                   Zona Bulevar y Europa      NaN       40,27849764   \n",
+      "15089                   Zona Bulevar y Europa      NaN       40,27849764   \n",
+      "15091                   Zona Bulevar y Europa      NaN       40,27849764   \n",
+      "15094                   Zona Bulevar y Europa      NaN       40,27849764   \n",
+      "15192                         Zona Zarzalejos      NaN         40,270392   \n",
+      "\n",
+      "               longitude  \n",
+      "453             -3,91864  \n",
+      "607    -3,91214199444133  \n",
+      "613           -3,9268743  \n",
+      "707           -3,9136693  \n",
+      "852           -3,9120264  \n",
+      "...                  ...  \n",
+      "15019        -3,91184112  \n",
+      "15089        -3,91184112  \n",
+      "15091        -3,91184112  \n",
+      "15094        -3,91184112  \n",
+      "15192  -3,90373610000006  \n",
+      "\n",
+      "[137 rows x 26 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "print(ds_cleaned_up[ds_cleaned_up[\"level5\"] == \"Arroyomolinos (Madrid)\"])\n"
    ]
   },
   {
@@ -878,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "070c7ed3",
    "metadata": {},
    "outputs": [],
