--- a/project.ipynb
+++ b/project.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "7ac6cb18",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[15335 rows x 37 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "id": "2a495ff1",
    "metadata": {},
    "outputs": [
@@ -904,103 +904,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Unnamed: 0  id_realEstates  isNew                  realEstate_name  \\\n",
-      "453           454       153843083  False                  akris arguelles   \n",
-      "607           608       153620088  False        100 home red inmobiliaria   \n",
-      "613           614       153478908  False               mares inmobiliaria   \n",
-      "707           708       153736961  False                         gm house   \n",
-      "852           853       153274493  False                         gm house   \n",
-      "...           ...             ...    ...                              ...   \n",
-      "15019       15020       152767314  False                 haya real estate   \n",
-      "15089       15090       152767395  False                 haya real estate   \n",
-      "15091       15092       152767377  False                 haya real estate   \n",
-      "15094       15095       152767335  False                 haya real estate   \n",
-      "15192       15193       146831440  False  miranda servicios inmobiliarios   \n",
-      "\n",
-      "       phone_realEstate                                       url_inmueble  \\\n",
-      "453         911792694.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
-      "607         912669623.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
-      "613         911794026.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
-      "707         916357589.0  https://www.fotocasa.es/es/comprar/vivienda/po...   \n",
-      "852         916357589.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
-      "...                 ...                                                ...   \n",
-      "15019       911227078.0  https://www.fotocasa.es/vivienda/getafe/calle-...   \n",
-      "15089       911227078.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
-      "15091       911227078.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
-      "15094       911227078.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
-      "15192       912789124.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
-      "\n",
-      "       rooms  bathrooms  surface     price  ...         level3  \\\n",
-      "453      2.0        2.0     85.0  165338.0  ...  Zona Suroeste   \n",
-      "607      4.0        3.0    225.0  251646.0  ...  Zona Suroeste   \n",
-      "613      4.0        4.0    257.0  396000.0  ...  Zona Suroeste   \n",
-      "707      3.0        2.0    110.0  225000.0  ...  Zona Suroeste   \n",
-      "852      4.0        2.0    280.0  373000.0  ...  Zona Suroeste   \n",
-      "...      ...        ...      ...       ...  ...            ...   \n",
-      "15019    3.0        2.0    143.0  218000.0  ...  Zona Suroeste   \n",
-      "15089    3.0        2.0    140.0  230000.0  ...  Zona Suroeste   \n",
-      "15091    3.0        2.0    143.0  217000.0  ...  Zona Suroeste   \n",
-      "15094    3.0        2.0    142.0  227000.0  ...  Zona Suroeste   \n",
-      "15192    3.0        2.0    300.0  462000.0  ...  Zona Suroeste   \n",
-      "\n",
-      "                       level4                  level5 level6  \\\n",
-      "453    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "607    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "613    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "707    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "852    Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "...                       ...                     ...    ...   \n",
-      "15019  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "15089  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "15091  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "15094  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "15192  Arroyomolinos, Zona de  Arroyomolinos (Madrid)    NaN   \n",
-      "\n",
-      "                                       level7 level8  \\\n",
-      "453                       Zona Las Castañeras    NaN   \n",
-      "607    La Cárcaba - El Encinar - Montemolinos    NaN   \n",
-      "613                     Zona Bulevar y Europa    NaN   \n",
-      "707                     Zona Bulevar y Europa    NaN   \n",
-      "852                     Zona Bulevar y Europa    NaN   \n",
-      "...                                       ...    ...   \n",
-      "15019                   Zona Bulevar y Europa    NaN   \n",
-      "15089                   Zona Bulevar y Europa    NaN   \n",
-      "15091                   Zona Bulevar y Europa    NaN   \n",
-      "15094                   Zona Bulevar y Europa    NaN   \n",
-      "15192                         Zona Zarzalejos    NaN   \n",
-      "\n",
-      "                                   upperLevel accuracy          latitude  \\\n",
-      "453                       Zona Las Castañeras      NaN          40,27657   \n",
-      "607    La Cárcaba - El Encinar - Montemolinos      NaN  40,2568635154027   \n",
-      "613                     Zona Bulevar y Europa      1.0        40,2839697   \n",
-      "707                     Zona Bulevar y Europa      NaN        40,2779047   \n",
-      "852                     Zona Bulevar y Europa      NaN        40,2827315   \n",
-      "...                                       ...      ...               ...   \n",
-      "15019                   Zona Bulevar y Europa      NaN       40,27849764   \n",
-      "15089                   Zona Bulevar y Europa      NaN       40,27849764   \n",
-      "15091                   Zona Bulevar y Europa      NaN       40,27849764   \n",
-      "15094                   Zona Bulevar y Europa      NaN       40,27849764   \n",
-      "15192                         Zona Zarzalejos      NaN         40,270392   \n",
-      "\n",
-      "               longitude  \n",
-      "453             -3,91864  \n",
-      "607    -3,91214199444133  \n",
-      "613           -3,9268743  \n",
-      "707           -3,9136693  \n",
-      "852           -3,9120264  \n",
-      "...                  ...  \n",
-      "15019        -3,91184112  \n",
-      "15089        -3,91184112  \n",
-      "15091        -3,91184112  \n",
-      "15094        -3,91184112  \n",
-      "15192  -3,90373610000006  \n",
-      "\n",
-      "[137 rows x 26 columns]\n"
+      "Average price in Arroyomolinos (Madrid) is\t298905.1777777778\n",
+      "Ignoring prices listed as zero (just in case), that average would be\t298905.1777777778\n"
      ]
     }
    ],
    "source": [
-    "print(ds_cleaned_up[ds_cleaned_up[\"level5\"] == \"Arroyomolinos (Madrid)\"])\n"
+    "level_five_location = \"Arroyomolinos (Madrid)\"\n",
+    "\n",
+    "print(f\"Average price in {level_five_location} is\\t{ds_cleaned_up[ds_cleaned_up['level5'] == level_five_location].price.mean()}\")\n",
+    "print(f\"Ignoring prices listed as zero (just in case), that average would be\\t{ds_cleaned_up[(ds_cleaned_up['level5'] == level_five_location) & (ds_cleaned_up['price'] > 0)].price.mean()}\")\n"
    ]
   },
   {
@@ -1015,14 +928,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "070c7ed3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Plot the histogram of prices"
+    "# Plot the histogram of prices\n"
    ]
   }
  ],
